--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,20 +10,21 @@ repositories {
 }
 
 buildscript {
+  //noinspection GradleCompatible
     repositories {
         google()
         jcenter()
     }
 
     dependencies {
-        classpath("com.android.tools.build:gradle:3.5.1")
+        classpath("com.android.tools.build:gradle:4.1.3")
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion safeExtGet('compileSdkVersion', 23)
+    compileSdkVersion safeExtGet('compileSdkVersion', 29)
 
     defaultConfig {
         minSdkVersion 17
@@ -42,7 +43,7 @@ android {
 
 
 dependencies {
-    implementation 'com.facebook.react:react-native:+'
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.annotation:annotation:1.0.2'
+    implementation 'com.facebook.react:react-native:0.20.1'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.annotation:annotation:1.2.0'
 }
